# DonutQMLPlayer

./: .gitignore  CMakeLists.txt  README.md  build.bat  install.bat
include/DonutAVLibrary/: core.h  donut_av_audio_player.h  donut_av_demux_handler.h  donut_av_demuxer.h  donut_av_format_base.h  donut_av_frame.h  donut_av_mux_handler.h  donut_av_muxer.h  donut_av_packet.h  donut_av_player_handler.h  donut_av_queue.h  donut_av_timer.h  donut_av_video_codec.h  donut_av_video_decode_handler.h  donut_av_video_decoder.h  donut_av_video_encode_handler.h  donut_av_video_encoder.h  donut_av_video_scaler.h  donut_frame_buffer.h  donut_gl_manager.h  donut_packet_buffer.h  donut_sdl_manager.h  i_donut_av_base_handler.h  i_donut_av_manager.h  media_types.h
src/: ControlBar.qml  CoverArea.qml  FontButton.qml  FontButton.qml.autosave  ImageButton.qml  Playlist.qml  Settings.qml  SideBar.qml  SkinColor.qml  VideoOptions.qml  VolumePopup.qml  dialogs.cpp  dialogs.h  donut_gl_item.cpp  donut_gl_item.h  donut_gl_renderer.cpp  donut_gl_renderer.h  donut_video_renderer.cpp  donut_video_renderer.h  main.cpp  main.qml  playlist_model.cpp  playlist_model.h  q_shader_f.glsl  q_shader_v.glsl  qml.qrc  qmldir  utils.cpp  utils.h
src/handler/: donut_av_decode_handler.cpp  donut_av_decode_handler.h  donut_av_demux_handler.cpp  donut_av_demux_handler.h  donut_gl_av_manager.h  donut_qml_av_manager.cpp  donut_qml_av_manager.h  i_donut_av_base_handler.cpp  i_donut_av_base_handler.h  i_donut_av_manager.cpp  i_donut_av_manager.h  i_donut_thread.cpp  i_donut_thread.h  i_donut_video_view.cpp  i_donut_video_view.h  media_type.h
src/log/: log.cpp  log.h
src/media/: core.h  donut_av_audio_player.cpp  donut_av_audio_player.h  donut_av_audio_resampler.cpp  donut_av_audio_resampler.h  donut_av_bs_filter.cpp  donut_av_bs_filter.h  donut_av_codec_base.cpp  donut_av_codec_base.h  donut_av_constructor.cpp  donut_av_constructor.h  donut_av_data_list.h  donut_av_data_tools.cpp  donut_av_data_tools.h  donut_av_decoder.cpp  donut_av_decoder.h  donut_av_demuxer.cpp  donut_av_demuxer.h  donut_av_format_base.cpp  donut_av_format_base.h  donut_av_global.h  donut_av_muxer.cpp  donut_av_video_codec.cpp  donut_av_video_codec.h  donut_av_video_decoder.cpp  donut_av_video_decoder.h  donut_av_video_encoder.cpp  donut_av_video_encoder.h  donut_av_video_scaler.cpp  donut_av_video_scaler.h  donut_sdl_audio_player.cpp  donut_sdl_audio_player.h  i_donut_audio_player.cpp  i_donut_audio_player.h  i_donut_av_base_handler.cpp  i_donut_av_base_handler.h  i_donut_thread.cpp
src/media/media_data/: donut_av_datas.cpp  donut_av_datas.h  donut_av_frame.cpp  donut_av_frame.h  donut_av_packet.cpp  donut_av_packet.h  donut_av_queue.h  donut_av_stream.cpp  donut_av_stream.h  donut_av_timer.cpp  donut_av_timer.h  donut_buffers.h  donut_frame_buffer.h  donut_packet_buffer.cpp  donut_packet_buffer.h
src/player/: donut_qml_av_manager.cpp  donut_qml_av_manager.h  donut_scene.cpp  donut_scene.h  donut_sdl_audio_player.cpp  donut_sdl_audio_player.h  i_donut_audio_player.cpp  i_donut_audio_player.h  i_donut_video_view.cpp  i_donut_video_view.h
src/renderer/: buffer_defs.h  buffers.cpp  buffers.h  camera.h  donut_fbo_renderer.cpp  donut_fbo_renderer.h  donut_fbo_scene.cpp  donut_fbo_scene.h  donut_framebuffer_item.cpp  donut_framebuffer_item.h  donut_gl_renderer_api.cpp  donut_gl_renderer_api.h  donut_opengl_renderer_api.h  donut_render_command.cpp  donut_render_command.h  donut_renderer.h  donut_renderer_api.h  donut_scene.cpp  donut_scene.h  donut_scene_camera.cpp  donut_scene_camera.h  donut_scene_renderer.cpp  donut_scene_renderer.h  donut_timer.cpp  donut_timer.h  editor_camera.cpp  editor_camera.h  graphics_context.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_index_buffer.cpp  opengl_index_buffer.h  opengl_shader.cpp  opengl_shader.h  opengl_texture_2d.cpp  opengl_texture_2d.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h  (+27 more)
src/renderer/opengl/: opengl_buffers.cpp  opengl_buffers.h  opengl_context.cpp  opengl_context.h  opengl_functions.cpp  opengl_functions.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_window.cpp  opengl_window.h
